[package]
name = "wallet-dat"
version = "0.1.0"
edition = "2021"
description = "Wallet dat file format parser and generator for dusk-wallet files"
repository = "https://github.com/dusk-network/dusk-wallet-dat"
license = "MPL-2.0"

[dependencies]
block-modes = "0.8"
dusk-bytes = "0.1.7"
rand = "0.8"
aes = "0.7"
blake3 = "1.3"
